Fix layout problem, fix view trackers of robots, change seeds, add gem rack-ssl to test https

--- a/MYR_rails/public/stylesheets/layout/styles/layout.css
+++ b/MYR_rails/public/stylesheets/layout/styles/layout.css
@@ -250,7 +250,7 @@ a:hover .hexagon i{color:rgba(0,0,0,0.5);}
 /* Navigation */
 #mainav li a{color:inherit; border-color:transparent;}
 #mainav .active a, #mainav a:hover, #mainav li:hover > a{color:#20D8FF; border-color:#20D8FF;}
-#mainav li li a, #mainav .active li a{color:#FFFFFF; background-color:rgba(0,0,0,.6); border-color:rgba(0,0,0,.6);}
+#mainav li li a, #mainav .active li a{color:#FFFFFF; background-color:rgba(0,0,0,1); border-color:rgba(0,0,0,.6);}
 #mainav li li:hover > a, #mainav .active .active > a{color:#FFFFFF; background-color:#20D8FF;}
 
 #breadcrumb a{color:#888888; background-color:inherit;}
@@ -271,7 +271,7 @@ table a, #comments a{background-color:inherit;}
 
 /*------------------ADDED-----------------------*/
 
-#updatebutton {
+/*#updatebutton {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3d94f6), color-stop(1, #1e62d0) );
 	background:-moz-linear-gradient( center top, #3d94f6 5%, #1e62d0 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#3d94f6', endColorstr='#1e62d0');
@@ -303,7 +303,7 @@ table a, #comments a{background-color:inherit;}
 	text-align:center;
 	text-shadow:1px 1px 0px #1570cd;
 	cursor:pointer;
-}
+}*/
 
 #map-canvas{
   width: 100%;
